syntax = "proto3";

package trainerpb;

option csharp_namespace = "TrainerApi";

import "google/protobuf/timestamp.proto";

service TrainerService {
    rpc GetTrainerById (TrainerByIdRequest) returns (TrainerResponse); //unarycall
    rpc CreateTrainers (stream CreateTrainerRequest) returns (CreateTrainerResponse);
    rpc GetAllTrainersByName (TrainersByNameRequest) returns (stream TrainerResponse);
}


message TrainersByNameRequest {
    string name = 1;
}

message CreateTrainerRequest {
    string name = 1;
    int32 age = 2;
    google.protobuf.Timestamp birthdate = 3;
    repeated Medal medals = 4;
}

message CreateTrainerResponse {
    int32 success_count = 1;
    repeated TrainerResponse trainers = 2;
}

message TrainerByIdRequest {
    string id = 1;
}

message TrainerResponse {
    string id = 1;
    string name = 2;
    int32 age = 3;
    google.protobuf.Timestamp birthdate = 4;
    google.protobuf.Timestamp created_at = 5;
    repeated Medal medals = 6;
}

message Medal {
    string region = 1;
    MedalType type = 2;

}


enum MedalType{
    UNKNOWN = 0;
    GOLD = 1;
    SILVER = 2;
    BRONZE = 3;
}